integration_tests/codegen_fail/fail/object/derive_field_double_underscored.rs
use juniper::GraphQLObject;

#[derive(GraphQLObject)]
struct Object {
    __test: String,
}

fn main() {}
